bootstrap 3: added missing input form class

--- a/bootstrap-style/@bootstrap3.datagrid.latte
+++ b/bootstrap-style/@bootstrap3.datagrid.latte
@@ -10,7 +10,7 @@
 {/redefine}
 
 {redefine col-filter}
-	{input $column->name class => "input-sm"}
+	{input $column->name class => "input-sm form-control"}
 {/redefine}
 
 {redefine row-actions-edit}
