fixed typo in block row-head-columns name

--- a/src/Datagrid.blocks.latte
+++ b/src/Datagrid.blocks.latte
@@ -20,7 +20,7 @@
 	{/if}
 {/define}
 
-{define row-head-colums}
+{define row-head-columns}
 	<tr class="grid-columns">
 		{foreach $columns as $column}
 			<th class="grid-col-{$column->name}">
