--- a/src/Datagrid.latte
+++ b/src/Datagrid.latte
@@ -21,13 +21,15 @@
 {php
 	$hasActionsColumn =
 		(bool) $control->getEditFormFactory() /* we may render only one row so the form[filter] may not be created */
-		|| isset($this->blockQueue["row-actions"])
-		|| isset($this->blockQueue["global-actions"]);
+		|| isset($this->blockQueue["row-actions"]);
+	$hasGlobalActionsColumn = isset($form['actions']);
 
 	foreach ($_templates as $_template):
 		$_template->params['hasActionsColumn'] = $hasActionsColumn;
+		$_template->params['hasGlobalActionsColumn'] = $hasGlobalActionsColumn;
 	endforeach;
 	$this->params['hasActionsColumn'] = $hasActionsColumn;
+	$this->params['hasGlobalActionsColumn'] = $hasGlobalActionsColumn;
 }
 
 {include #table-open-tag}
@@ -50,7 +52,8 @@
 	</tbody>
 	<tfoot n:ifset="$paginator">
 		<tr>
-			<th colspan="{=count($columns) + $hasActionsColumn}">
+			<th colspan="{=count($columns) + $hasGlobalActionsColumn + $hasActionsColumn}">
+				{include #global-actions}
 				{include #pagination}
 			</th>
 		</tr>
