Order can now have multiple columns
Order can now have multiple columns, but there is some BC changes.

Order of columns are based of call order of getNewState, so if you
manually change order of getNewState, or add custom $order, it can be
changed again by user (or if user change URL manually). This can be
fixed by calling columns in proper order on getOrder (not sure if this
is necessary as it may be intend for programmers to change order).

$order passed to data callback and data count callback is in key =>
value form, so it is easier to build order string.
$order = [
`column` => `ASC|DESC`
]

--- a/src/Datagrid.blocks.latte
+++ b/src/Datagrid.blocks.latte
@@ -28,7 +28,7 @@
 		{foreach $columns as $column}
 			<th class="grid-col-{$column->name}">
 				{if $column->canSort()}
-					<a href="{link sort! orderColumn => $column->name, orderType => $column->getNewState()}" class="ajax">{$column->label}</a>
+					<a href="{link sort! order => $column->getNewState()}" class="ajax">{$column->label}</a>
 					{if $column->isAsc()}
 						<span class="grid-sort-symbol grid-sort-symbol-asc"><em>&#9650;</em></span>
 					{elseif $column->isDesc()}
@@ -62,7 +62,7 @@
 	<tr class="grid-filters">
 		{ifset $form[actions]}
 			<th class="grid-col-global-actions"></th>
-		{/ifset}	
+		{/ifset}
 		{formContainer filter}
 		{foreach $columns as $column}
 			<th class="grid-col-{$column->name}">
