Added possibility to set form action anchor

--- a/src/Datagrid.latte
+++ b/src/Datagrid.latte
@@ -4,7 +4,7 @@
  * @license    MIT
  * @link       https://github.com/nextras
  *}
-<div class="grid" data-grid-name="{$control->getUniqueId()}">
+<div class="grid" data-grid-name="{$control->getUniqueId()}" id="{$control->getUniqueId()}">
 {snippet rows}
 
 {var $_templates = []}
