Column titles rendered via #row-head-cell block

--- a/src/Datagrid.blocks.latte
+++ b/src/Datagrid.blocks.latte
@@ -20,6 +20,10 @@
 	{/if}
 {/define}
 
+{define row-head-cell}
+	{$column->label}
+{/define}
+
 {define row-head-columns}
 	<tr class="grid-columns">
 		{ifset $form[actions]}
@@ -28,7 +32,7 @@
 		{foreach $columns as $column}
 			<th class="grid-col-{$column->name}">
 				{if $column->canSort()}
-					<a href="{link sort! orderColumn => $column->name, orderType => $column->getNewState()}" class="ajax">{$column->label}</a>
+					<a href="{link sort! orderColumn => $column->name, orderType => $column->getNewState()}" class="ajax">{include #row-head-cell column => $column}</a>
 					{if $column->isAsc()}
 						<span class="grid-sort-symbol grid-sort-symbol-asc"><em>&#9650;</em></span>
 					{elseif $column->isDesc()}
@@ -37,7 +41,7 @@
 						<span class="grid-sort-symbol grid-sort-symbol-no"></span>
 					{/if}
 				{else}
-					{$column->label}
+					{include #row-head-cell column => $column}
 				{/if}
 			</th>
 		{/foreach}
