--- a/src/Datagrid.latte
+++ b/src/Datagrid.latte
@@ -21,7 +21,7 @@
 {php
 	$hasActionsColumn =
 		(bool) $control->getEditFormFactory() /* we may render only one row so the form[filter] may not be created */
-		|| isset($this->blockQueue["row-actions"]);
+		|| $this->hasBlock("row-actions");
 	$hasGlobalActionsColumn = isset($form['actions']);
 
 	foreach ($_templates as $_template):
