Blocks open/close for thead and tbody defined.

--- a/src/Datagrid.blocks.latte
+++ b/src/Datagrid.blocks.latte
@@ -13,6 +13,22 @@
 	</table>
 {/define}
 
+{define table-thead-open-tag}
+	<thead>
+{/define}
+
+{define table-thead-close-tag}
+	</thead>
+{/define}
+
+{define table-tbody-open-tag}
+	<tbody>
+{/define}
+
+{define table-tbody-close-tag}
+	</tbody>
+{/define}
+
 {define global-filter-actions}
 	{input filter}
 	{if $showCancel}
